adding instrument soundfonts

--- a/web/index.html
+++ b/web/index.html
@@ -20,6 +20,7 @@
 </head>
 <body>
 	<h1>Hello, world!</h1>
+    <script src="assets/soundfont-player.min.js"></script>
 	<script src="assets/Tone.min.js"></script>
 	<script src="main.js"></script>
 </body>
