--- a/web/index.html
+++ b/web/index.html
@@ -17,6 +17,9 @@
     	<![endif]-->
 	<script src="//code.jquery.com/jquery.js"></script>
 	<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+
+    <link rel="stylesheet/less" type="text/css" href="styles.less" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/2.7.2/less.min.js"></script>
 </head>
 <body>
 	<h1>Hello, world!</h1>
