--- a/web/index.html
+++ b/web/index.html
@@ -22,7 +22,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/2.7.2/less.min.js"></script>
 </head>
 <body>
-	<h1>Hello, world!</h1>
+	<h1 id="title">Loading...</h1>
+    <hr>
     <script src="assets/soundfont-player.min.js"></script>
 	<script src="assets/Tone.min.js"></script>
 	<script src="main.js"></script>
