--- a/web/index.html
+++ b/web/index.html
@@ -22,10 +22,28 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/2.7.2/less.min.js"></script>
 </head>
 <body>
-	<h1 id="title">Loading...</h1>
+    <div class="container">
+        <h1>Musial!</h1>
+        <p>What is the sound of pitching?</p>
+    </div>
     <hr>
+    <div id="main-container" class="container">
+        <h1 id="title">Loading...</h1>
+    </div>
+
+    <hr>
+
+    <div class="container">
+        <p>A 2017 Boston Baseball Hackday Hack by:</p>
+        <ul>
+            <li><a href="https://github.com/stattleship/musial">David Thyresson</a></li>
+            <li><a href="https://github.com/adorsk">Alex Dorsk</a></li>
+        </ul>
+        <p>Source code: <a href="https://github.com/stattleship/musial">
+                https://github.com/stattleship/musial</a></p>
+    </div>
     <script src="assets/soundfont-player.min.js"></script>
-	<script src="assets/Tone.min.js"></script>
-	<script src="main.js"></script>
+    <script src="assets/Tone.min.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
