Pretty up stylings and pulses the pitch info

--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Musial</title>
-    <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon"> 
+    <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
 	<link rel="icon" type="image/png" href="favicon.png">
@@ -18,13 +18,18 @@
 	<script src="//code.jquery.com/jquery.js"></script>
 	<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Bhaina" rel="stylesheet">
     <link rel="stylesheet/less" type="text/css" href="styles.less" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/2.7.2/less.min.js"></script>
 </head>
 <body>
-    <div class="container">
-        <h1>Musial!</h1>
-        <p>What is the sound of pitching?</p>
+    <div class="container view-header">
+        <section>
+            <header>
+                <h1>Musial!</h1>
+                <p>What is the sound of pitching?</p>
+            </header>
+        </section>
     </div>
     <hr>
     <div id="main-container" class="container">
@@ -34,13 +39,14 @@
     <hr>
 
     <div class="container">
-        <p>A 2017 Boston Baseball Hackday Hack by:</p>
+        <p>A <a href="http://www.baseballhackday.com/boston/" target="_blank">2017 Boston Baseball Hackday</a> Hack by:</p>
         <ul>
-            <li><a href="https://github.com/stattleship/musial">David Thyresson</a></li>
-            <li><a href="https://github.com/adorsk">Alex Dorsk</a></li>
+            <li><a href="https://github.com/stattleship/musial" target="_blank">David Thyresson</a></li>
+            <li><a href="https://github.com/adorsk" target="_blank">Alex Dorsk</a></li>
         </ul>
-        <p>Source code: <a href="https://github.com/stattleship/musial">
+        <p>Source code: <a href="https://github.com/stattleship/musial" target="_blank">
                 https://github.com/stattleship/musial</a></p>
+        <p>Note: Requires Chrome</p>
     </div>
     <script src="assets/soundfont-player.min.js"></script>
     <script src="assets/Tone.min.js"></script>
