Give data credits and generate a song playlist

--- a/web/index.html
+++ b/web/index.html
@@ -46,7 +46,12 @@
         </ul>
         <p>Source code: <a href="https://github.com/stattleship/musial" target="_blank">
                 https://github.com/stattleship/musial</a></p>
-        <p>Note: Requires Chrome</p>
+
+        <p>Data provided by: <a href="https://api.stattleship.com/" target="_blank">
+                Stattleship API</a> and <a href="http://sportradar.us/" target="_blank">
+                Sportradar US</a></p>
+
+        <p>Note: Requires Chrome. If issues playing, <a href="/">reload</a> :) </p>
     </div>
     <script src="assets/soundfont-player.min.js"></script>
     <script src="assets/Tone.min.js"></script>
