Adds tribute to Stan Musial

--- a/web/index.html
+++ b/web/index.html
@@ -26,6 +26,7 @@
     <div class="container view-header">
         <section>
             <header>
+                <img src="assets/musial.png">
                 <h1>Musial!</h1>
                 <p>What is the sound of pitching?</p>
             </header>
@@ -50,6 +51,8 @@
         <p>Data provided by: <a href="https://api.stattleship.com/" target="_blank">
                 Stattleship API</a> and <a href="http://sportradar.us/" target="_blank">
                 Sportradar US</a></p>
+
+        <p>Project name is a play on <a href="https://en.wikipedia.org/wiki/Stan_Musial" target="_blank">Stan Musial</a> who was not only one of baseball's most consistent hitters, but also a noted harmonica player.
 
         <p>Note: Requires Chrome. If issues playing, <a href="/">reload</a> :) </p>
     </div>
