Be able to pick a track to play

--- a/web/index.html
+++ b/web/index.html
@@ -47,6 +47,10 @@
                 <img src="assets/musial.png">
                 <h1>Musial!</h1>
                 <p>What is the sound of pitching?</p>
+                Listen To:
+                <a href="?track=0">Game Track</a> |
+                <a href="?track=1">Home Pitcher Track</a> |
+                <a href="?track=2">Away Pitcher Track</a>
             </header>
         </section>
     </div>
