Link to Stan Musial harmonica video

--- a/web/index.html
+++ b/web/index.html
@@ -74,7 +74,7 @@
                 Stattleship API</a> and <a href="http://sportradar.us/" target="_blank">
                 Sportradar US</a></p>
 
-        <p>Project name is a play on <a href="https://en.wikipedia.org/wiki/Stan_Musial" target="_blank">Stan Musial</a> who was not only one of baseball's most consistent hitters, but also a noted harmonica player.
+        <p>Project name is a play on <a href="https://en.wikipedia.org/wiki/Stan_Musial" target="_blank">Stan Musial</a> who was not only one of baseball's most consistent hitters, but also a noted <a href="https://www.youtube.com/watch?v=OjTBcJaPj2o" target="_blank">harmonica player</a>.
 
         <p>Note: Requires Chrome. If issues playing, <a href="/">reload</a> :) </p>
     </div>
